changes to readme file

--- a/11-debugging/ABS_Chap_11.ipynb
+++ b/11-debugging/ABS_Chap_11.ipynb
@@ -5,9 +5,7 @@
     "colab": {
       "name": "ABS_Chap_11.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJyf+u8f5+f+2UvISWcbl7",
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/UIHackyHour/AutomateTheBoringSweigart/blob/main/ABS_Chap_11.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -48,6 +36,26 @@
         "# Packages used in this chapter\r\n",
         "\r\n",
         "* `logging`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qOFfSWpseaMp"
+      },
+      "source": [
+        "# New functions covered in this chapter\r\n",
+        "\r\n",
+        "* "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mf0cLewUeF8C"
+      },
+      "source": [
+        ""
       ]
     }
   ]
