smll chng to 07nb, readme, 11nb

--- a/07-pattern-matching-with-regular-expressions/ABS_Chap_7.ipynb
+++ b/07-pattern-matching-with-regular-expressions/ABS_Chap_7.ipynb
@@ -43,13 +43,13 @@
         "id": "CVJAQw8dhuhy"
       },
       "source": [
-        "# Definition\n",
+        "# Definitions\n",
         "\n",
-        "* Regular expressions: Regular expressions, called regexes for short, are descriptions for a pattern of text, and allow you to specify a pattern of text to search for.\n",
+        "* __Regular expressions__: Regular expressions, called regexes for short, are descriptions for a pattern of text, and allow you to specify a pattern of text to search for.\n",
         "\n",
-        "* Pipe: Allows for more than one expression to be searched.\n",
+        "* __Pipe__: Allows for more than one expression to be searched.\n",
         "\n",
-        "* Greedy: By default, Python interprets ambiguous regular expressions by the longest possible sting.\n",
+        "* __Greedy__: By default, Python interprets ambiguous regular expressions by the longest possible sting.\n",
         "\n"
       ]
     },
