--- a/11-debugging/ABS_Chap_11.ipynb
+++ b/11-debugging/ABS_Chap_11.ipynb
@@ -9,7 +9,8 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "language": "python"
     }
   },
   "cells": [
@@ -26,6 +27,15 @@
         "\r\n",
         "The debugger lets you step through your program one line at a time. Alternatively, you can run your program at normal speed and have the debugger pause execution whenever it reaches a line with a breakpoint set. Using the debugger, you can see the state of any variable’s value at any point during the program’s lifetime."
       ]
+    },
+    {
+      "source": [
+        "# Definitions\n",
+        "\n",
+        "* __Expections__: Errors detected during execution."
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
@@ -50,13 +60,38 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# boxPrint.py\n",
+        "\n",
+        "def boxPrint(symbol, width, height):\n",
+        "    if len(symbol) != 1:\n",
+        "        raise Exception('Symbol must be a single character string.')\n",
+        "    if width<=2:\n",
+        "        raise Exception('Width must be greater than 2.')\n",
+        "    if height<= 2:\n",
+        "        raise Exception('Height must be greater than 2.')\n",
+        "    print(symbol*width)\n",
+        "    for i in range(height-2):\n",
+        "        print(symbol+(' '*(width-2))+symbol)\n",
+        "    print(symbol*width)\n",
+        "\n",
+        "for sym, w, h in (('*', 4, 4), ('O', 20, 5), ('x', 1, 3), ('ZZ', 3, 3)):\n",
+        "    try:\n",
+        "        boxPrint(sym,w,h)\n",
+        "    except Exception as err:\n",
+        "        print('An exception happened: ' + str(err))"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "mf0cLewUeF8C"
       },
-      "source": [
-        ""
-      ]
+      "source": []
     }
   ]
 }
