chngs to readme and ch11

--- a/11-debugging/ABS_Chap_11.ipynb
+++ b/11-debugging/ABS_Chap_11.ipynb
@@ -32,7 +32,10 @@
       "source": [
         "# Definitions\n",
         "\n",
-        "* __Expections__: Errors detected during execution."
+        "* __Expections__: Errors detected during execution.\n",
+        "* __Traceback__: Error information that includes an error message, the line number of the line that caused the error, and the call stack.\n",
+        "* __Call stack__: The sequence of the function calls the led to the error.\n",
+        "* Assertion: A sanity check on your program to ensure is it's doing anything obviously wrong. These should be used to fins programmer errors and not user errors."
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -43,9 +46,10 @@
         "id": "KYGFKG51rYjo"
       },
       "source": [
-        "# Packages used in this chapter\r\n",
-        "\r\n",
-        "* `logging`"
+        "# Packages used in this chapter\n",
+        "\n",
+        "* `logging`\n",
+        "* `traceback`"
       ]
     },
     {
@@ -54,10 +58,32 @@
         "id": "qOFfSWpseaMp"
       },
       "source": [
-        "# New functions covered in this chapter\r\n",
-        "\r\n",
-        "* "
+        "# New functions covered in this chapter\n",
+        "\n",
+        "* logging.basicConfig()\n",
+        "* logging.debug()\n",
+        "* logging.disable(logging.CRITICAL)\n",
+        "* logging.info()\n",
+        "* logging.warning()\n",
+        "* logging.error()\n",
+        "* logging.critical()"
       ]
+    },
+    {
+      "source": [
+        "# Logging Levels\n",
+        "\n",
+        "* DEBUG"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "source": [
+        "# Code Snippits"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "code",
@@ -87,11 +113,83 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# errorExample.py\n",
+        "\n",
+        "def spam():\n",
+        "    bacon()\n",
+        "def bacon():\n",
+        "    raise Exception('This is the error message.')\n",
+        "spam()"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "mf0cLewUeF8C"
       },
-      "source": []
+      "source": [
+        "# Practice Questions"
+      ]
+    },
+    {
+      "source": [
+        "1. Write an assert statement that triggers an `AssertionError` if the variable `spam` is an integer less than 10.\n",
+        "\n",
+        "2. Write an assert statement that triggers an `AssertionError` if the variables `eggs` and `bacon` contain strings that are the same as each other, even if their cases are different (that is, `'hello'` and 'hello' are considered the same, and `'goodbye'` and `'GOODbye'` are also considered the same).\n",
+        "\n",
+        "3. Write an assert statement that always triggers an `AssertionError`.\n",
+        "\n",
+        "4. What are the two lines that your program must have in order to be able to call `logging.debug()`?\n",
+        "\n",
+        "5. What are the two lines that your program must have in order to have `logging.debug()` send a logging message to a file named *programLog.txt*?\n",
+        "\n",
+        "6. What are the five logging levels?\n",
+        "\n",
+        "7. What line of code can you add to disable all logging messages in your program?\n",
+        "\n",
+        "8. Why is using logging messages better than using `print()` to display the same message?"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "source": [
+        "# Practice Project"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "source": [
+        "## Debugging Coin Toss\n",
+        "\n",
+        "The following program is meant to be a simple coin toss guessing game. The player gets two guesses (it’s an easy game). However, the program has several bugs in it. Run through the program a few times to find the bugs that keep the program from working correctly.\n",
+        "___\n",
+        "```\n",
+        "import random\n",
+        "guess = ''\n",
+        "while guess not in ('heads', 'tails'):\n",
+        "    print('Guess the coin toss! Enter heads or tails:')\n",
+        "    guess = input()\n",
+        "toss = random.randint(0, 1) # 0 is tails, 1 is heads\n",
+        "if toss == guess:\n",
+        "    print('You got it!')\n",
+        "else:\n",
+        "    print('Nope! Guess again!')\n",
+        "    guesss = input()\n",
+        "    if toss == guess:\n",
+        "        print('You got it!')\n",
+        "    else:\n",
+        "        print('Nope. You are really bad at this game.')\n",
+        "```"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     }
   ]
 }
