--- a/11-debugging/ABS_Chap_11.ipynb
+++ b/11-debugging/ABS_Chap_11.ipynb
@@ -15,6 +15,13 @@
   },
   "cells": [
     {
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/UIHackyHour/AutomateTheBoringSweigart/blob/main/11-debugging/ABS_Chap_11.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "yFCGnmbvZ-4w"
@@ -32,7 +39,7 @@
       "source": [
         "# Definitions\n",
         "\n",
-        "* __Expections__: Errors detected during execution.\n",
+        "* __Exceptions__: Errors detected during execution.\n",
         "* __Traceback__: Error information that includes an error message, the line number of the line that caused the error, and the call stack.\n",
         "* __Call stack__: The sequence of the function calls the led to the error.\n",
         "* Assertion: A sanity check on your program to ensure is it's doing anything obviously wrong. These should be used to fins programmer errors and not user errors."
