--- a/03-functions/ABS_Chap_3.ipynb
+++ b/03-functions/ABS_Chap_3.ipynb
@@ -10,7 +10,8 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "language": "python"
     }
   },
   "cells": [
@@ -47,17 +48,17 @@
       "source": [
         "# Definitions\n",
         "\n",
-        "* Parameter: Calling on a function will assign the arguement to a variable, called a parameter, inside the parentheses of the function definition. A parameter is forgotten when the function returns. See \"argument\" definition.\n",
+        "* __Parameter__: Calling on a function will assign the arguement to a variable, called a parameter, inside the parentheses of the function definition. A parameter is forgotten when the function returns. See \"argument\" definition.\n",
         "\n",
-        "* Keyword argument: Often used to make function calls more explicit. Keyword arguments are parameters defined by a `keyword=value` in a function call.\n",
+        "* __Keyword argument__: Often used to make function calls more explicit. Keyword arguments are parameters defined by a `keyword=value` in a function call.\n",
         "\n",
-        "* Positional argument: Often used when multiple arguments. Positional arguments need to be included in the proper position or order in a function call.\n",
+        "* __Positional argument__: Often used when multiple arguments. Positional arguments need to be included in the proper position or order in a function call.\n",
         "\n",
-        "* Local scope: Refers to all instances of a program within a function that only exists so long as the function is active.\n",
+        "* __Local scope__: Refers to all instances of a program within a function that only exists so long as the function is active.\n",
         "\n",
-        "* Global scope: Refers to all instances of code within a program, except for local scopes unless explicity stated otherwise (with the `global` statement in a function).\n",
+        "* __Global scope__: Refers to all instances of code within a program, except for local scopes unless explicity stated otherwise (with the `global` statement in a function).\n",
         "\n",
-        "* Exception: Errors detected by Python during execution of code."
+        "* __Exception__: Errors detected by Python during execution of code."
       ]
     },
     {
@@ -328,7 +329,7 @@
         "\n",
         "10. What is the data type of `None`?\n",
         "\n",
-        "11. What does the import areallyourpetsnamederic statement do?\n",
+        "11. What does the `import areallyourpetsnamederic statement` do?\n",
         "\n",
         "12. If you had a function named `bacon()` in a module named `spam`, how would you call it after importing `spam`?\n",
         "\n",
@@ -336,7 +337,7 @@
         "\n",
         "14. What goes in the `try` clause? What goes in the `except` clause?\n",
         "\n",
-        "15. Are parameters of a function that is defined at the beginning of your script in a local scope or the global scope?"
+        "15. Are parameters of a function, that are defined at the beginning of your script, in a local scope or the global scope?"
       ]
     },
     {
@@ -347,31 +348,49 @@
       "source": [
         "# Practice Projects\n",
         " \n",
-        "## The Collatz Sequence\n",
+        "## *The Collatz Sequence*\n",
+        "\n",
         "Write a function named `collatz()` that has one parameter named `number`. If `number` is even, then `collatz()` should print `number // 2` and return this value. If number is odd, then `collatz()` should print and return `3 * number + 1`.\n",
         "\n",
-        "Then write a program that lets the user type in an integer and that keeps calling `collatz()` on that number until the function returns the value 1. (Amazingly enough, this sequence actually works for any integer—sooner or later, using this sequence, you’ll arrive at 1! Even mathematicians aren’t sure why. Your program is exploring what’s called the Collatz sequence, sometimes called “the simplest impossible math problem.”)\n",
+        "Then write a program that lets the user type in an integer and that keeps calling `collatz()` on that number until the function returns the value 1. (Amazingly enough, this sequence actually works for any integer—sooner or later, using this sequence, you’ll arrive at 1! Even mathematicians aren’t sure why. Your program is exploring what’s called the *Collatz sequence*, sometimes called “the simplest impossible math problem.”)\n",
         "\n",
         "Remember to convert the return value from `input()` to an integer with the `int()` function; otherwise, it will be a string value.\n",
         "\n",
-        "Hint: An integer number is even if number `% 2 == 0`, and it’s odd if number `% 2 == 1`.\n",
+        "Hint: An integer number is even if `number % 2 == 0`, and it’s odd if `number % 2 == 1`.\n",
         "\n",
         "The output of this program could look something like this:\n",
+        "___\n",
         "```\n",
         "Enter number:\n",
+        "\n",
         "3\n",
+        "\n",
         "10\n",
+        "\n",
         "5\n",
+        "\n",
         "16\n",
+        "\n",
         "8\n",
+        "\n",
         "4\n",
+        "\n",
         "2\n",
+        "\n",
         "1\n",
         "```\n",
-        "## Input Validation\n",
-        "Add try and except statements to the previous project to detect whether the user types in a noninteger string. Normally, the `int()` function will raise a `ValueError` error if it is passed a noninteger string, as in `int('puppy')`. In the except clause, print a message to the user saying they must enter an integer.\n",
+        "___\n",
         "\n"
       ]
+    },
+    {
+      "source": [
+        "## *Input Validation*\n",
+        "\n",
+        "Add `try` and `except` statements to the previous project to detect whether the user types in a noninteger string. Normally, the `int()` function will raise a `ValueError` error if it is passed a noninteger string, as in `int('puppy')`. In the `except` clause, print a message to the user saying they must enter an integer."
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     }
   ]
 }
