--- a/04-lists/ABS_Chap_4.ipynb
+++ b/04-lists/ABS_Chap_4.ipynb
@@ -11,7 +11,8 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "language": "python"
     }
   },
   "cells": [
@@ -49,20 +50,30 @@
       "source": [
         "# Definitions\n",
         "\n",
-        "* List: A data structure in Python that is a mutable ordered sequence of elements, called items, contained within brackets `[]`\n",
+        "* __List__: A data structure in Python that is a mutable ordered sequence of elements, called items, contained within brackets `[]`\n",
         "\n",
-        "* Index: Refers to a position within a list, string, or other ordered sequence.\n",
+        "* __Index__: Refers to a position within a list, string, or other ordered sequence.\n",
         "\n",
-        "* Method definition: A function that is available for a given object because of the object's type.\n",
+        "* __Method__: A function that is available for a given object because of the object's type.\n",
         "\n",
-        "* In place: Making a change to a Python object without returning a copy.\n",
+        "* __In place__: Making a change to a Python object without returning a copy.\n",
         "\n",
-        "* Mutable: An object in Python is said to be mutable when it can be changed after it is created.\n",
+        "* __Mutable__: An object in Python is said to be mutable when it can be changed after it is created.\n",
         "\n",
-        "* Tuple: A data structure in Python that is an ordered sequence of elements, like a list, but is immutable and contained within parentheses `()`\n",
+        "* __Tuple__: A data structure in Python that is an ordered sequence of elements, like a list, but is immutable and contained within parentheses `()`\n",
         "\n",
-        "* Reference: A name that refers to the specific location in memory of a Python object."
+        "* __Reference__: A name that refers to the specific location in memory of a Python object."
       ]
+    },
+    {
+      "source": [
+        "# Modules covered in this chapter\n",
+        "\n",
+        "* `random`\n",
+        "* `copy`"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
@@ -73,19 +84,19 @@
         "# New functions covered this chapter\n",
         "\n",
         "* `enumerate()`\n",
-        "* `random.choice()` requires `import random`\n",
-        "* `random.shuffle()` requires `import random`\n",
-        "* listName`.index()`\n",
-        "* listName`.append()` \n",
-        "* listName`.insert()`\n",
-        "* listName`.remove()`\n",
-        "* listName`.sort()`\n",
-        "* listName`.reverse()`\n",
+        "* `random.choice()`\n",
+        "* `random.shuffle()`\n",
+        "* *listName*`.index()`\n",
+        "* *listName*`.append()` \n",
+        "* *listName*`.insert()`\n",
+        "* *listName*`.remove()`\n",
+        "* *listName*`.sort()`\n",
+        "* *listName*`.reverse()`\n",
         "* `list()`\n",
         "* `tuple()`\n",
         "* `id()`\n",
-        "* `copy.copy()` requires `import copy`\n",
-        "* `copy.deepcopy()` requires `import copy`\n",
+        "* `copy.copy()`\n",
+        "* `copy.deepcopy()`\n",
         "\n",
         "\n",
         "### Try using these functions, then explain what you think these functions are doing. \n",
@@ -226,7 +237,7 @@
         "\n",
         "2. How would you assign the value 'hello' as the third value in a list stored in a variable named spam? Assume spam contains `[2, 4, 6, 8, 10]`\n",
         "\n",
-        "For the following three questions, let’s say spam contains the list `['a', 'b', 'c', 'd']`.\n",
+        "### For the following three questions, let’s say spam contains the list `['a', 'b', 'c', 'd']`.\n",
         "\n",
         "3. What does `spam[int(int('3' * 2) // 11)]` evaluate to?\n",
         "\n",
@@ -234,7 +245,7 @@
         "\n",
         "5. What does `spam[:2]` evaluate to?\n",
         "\n",
-        "For the following three questions, let’s say bacon contains the list `[3.14, 'cat', 11, 'cat', True]`.\n",
+        "### For the following three questions, let’s say bacon contains the list `[3.14, 'cat', 11, 'cat', True]`.\n",
         "\n",
         "6. What does `bacon.index('cat')` evaluate to?\n",
         "\n",
@@ -263,12 +274,18 @@
       ]
     },
     {
+      "source": [
+        "# Practice Projects "
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "CO4nU1Egb-gs"
       },
       "source": [
-        "# Practice Projects \n",
         "## Comma Code\n",
         "Say you have a list value like this:\n",
         "\n",
@@ -347,7 +364,7 @@
         "```\n",
         "Hint: You will need to use a loop in a loop in order to print `grid[0][0]`, then `grid[1][0]`, then `grid[2][0]`, and so on, up to `grid[8][0]`. This will finish the first row, so then print a newline. Then your program should print `grid[0][1]`, then `grid[1][1]`, then `grid[2][1]`, and so on. The last thing your program will print is `grid[8][5]`.\n",
         "\n",
-        "Also, remember to pass the end keyword argument to `print()` if you don’t want a newline printed automatically after each `print()` call."
+        "Also, remember to pass the `end` keyword argument to `print()` if you don’t want a newline printed automatically after each `print()` call."
       ]
     }
   ]
