--- a/05-dictionaries-and-structuring-data/ABS_Chap_5.ipynb
+++ b/05-dictionaries-and-structuring-data/ABS_Chap_5.ipynb
@@ -43,14 +43,23 @@
       "source": [
         "# Definition\n",
         "\n",
-        "* Dictionary: A mutable collection of unorded values indexed by keys.\n",
+        "* __Dictionary__: A mutable collection of unorded values indexed by keys.\n",
         "\n",
-        "* Key: Each value in a dictionary is assigned a key, similar to how values in a list are assigned a integer.\n",
+        "* __Key__: Each value in a dictionary is assigned a key, similar to how values in a list are assigned a integer.\n",
         "\n",
-        "* Value: Values are stored in a dictionary and indexed by a key.\n",
+        "* __Value__: Values are stored in a dictionary and indexed by a key.\n",
         "\n",
-        "* Item: Item refers to the pair value and key, together.\n"
+        "* __Item__: Item refers to the pair value and key, together.\n"
       ]
+    },
+    {
+      "source": [
+        "# New modules covered in this chapter\n",
+        "\n",
+        "* `pprint`"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
@@ -58,29 +67,29 @@
         "id": "ilDQsDjS0C-D"
       },
       "source": [
-        "# New functions covered in this chapter\r\n",
-        "\r\n",
-        "\r\n",
-        "* `keys()`\r\n",
-        "\r\n",
-        "* `list(dictionaryname)`\r\n",
-        "\r\n",
-        "* `dictionaryname.values()`\r\n",
-        "\r\n",
-        "* `dictionaryname.items()`\r\n",
-        "\r\n",
-        "* `dictionaryname.get()`\r\n",
-        "\r\n",
-        "* `dictionaryname.setdefault()`\r\n",
-        "\r\n",
-        "* `pprint.pprint()` requires `import pprint`\r\n",
-        "\r\n",
-        "* `pprint.pformat()` requires `import pprint`\r\n",
-        "\r\n",
-        "### Try using these functions, then explain what you think these functions are doing. \r\n",
-        "#### Google them to learn more! \r\n",
-        "(Googling is a very important skill when programming)\r\n",
-        "\r\n"
+        "# New functions covered in this chapter\n",
+        "\n",
+        "\n",
+        "* `keys()`\n",
+        "\n",
+        "* `list(`*dictionaryname*`)`\n",
+        "\n",
+        "* *dictionaryname*`.values()`\n",
+        "\n",
+        "* *dictionaryname*`.items()`\n",
+        "\n",
+        "* *dictionaryname*`.get()`\n",
+        "\n",
+        "* *dictionaryname*`.setdefault()`\n",
+        "\n",
+        "* `pprint.pprint()`\n",
+        "\n",
+        "* `pprint.pformat()`\n",
+        "\n",
+        "### Try using these functions, then explain what you think these functions are doing. \n",
+        "#### Google them to learn more! \n",
+        "(Googling is a very important skill when programming)\n",
+        "\n"
       ]
     },
     {
@@ -202,11 +211,17 @@
         "\n",
         "\n",
         "01.   What does the code for an empty dictionary look like?\n",
+        "\n",
         "0.   What does a dictionary value with a key `'foo'` and a value `42` look like?\n",
+        "\n",
         "0.   What is the main difference between a dictionary and a list?\n",
+        "\n",
         "0.   What happens if you try to access `spam['foo']` if spam is `{'bar': 100}`?\n",
+        "\n",
         "0. If a dictionary is stored in spam, what is the difference between the expressions `'cat' in spam` and `'cat' in spam.keys()`?\n",
+        "\n",
         "0. If a dictionary is stored in spam, what is the difference between the expressions `'cat' in spam` and `'cat' in spam.values()`?\n",
+        "\n",
         "0. What is a shortcut for the following code?\n",
         "_______\n",
         "```\n",
@@ -214,6 +229,7 @@
         "    spam['color'] = 'black'\n",
         "```\n",
         "_______\n",
+        "\n",
         "8. What module and function can be used to “pretty print” dictionary values?"
       ]
     },
@@ -235,8 +251,9 @@
         "## Fantasy Game Inventory\n",
         "You are creating a fantasy video game. The data structure to model the player’s inventory will be a dictionary where the keys are string values describing the item in the inventory and the value is an integer value detailing how many of that item the player has. For example, the dictionary value `{'rope': 1, 'torch': 6, 'gold coin': 42, 'dagger': 1, 'arrow': 12}` means the player has 1 rope, 6 torches, 42 gold coins, and so on.\n",
         "\n",
-        "Write a function named displayInventory() that would take any possible “inventory” and display it like the following:\n",
+        "Write a function named `displayInventory()` that would take any possible “inventory” and display it like the following:\n",
         "___\n",
+        "```\n",
         "Inventory:\\\n",
         "12 arrow\\\n",
         "42 gold coin\\\n",
@@ -244,6 +261,7 @@
         "6 torch\\\n",
         "1 dagger\\\n",
         "Total number of items: 62\n",
+        "```\n",
         "___\n",
         "*Hint: You can use a* `for` *loop to loop through all the keys in a dictionary.*\n",
         "\n"
