--- a/06-manipulating-strings/ABS_Chap_6.ipynb
+++ b/06-manipulating-strings/ABS_Chap_6.ipynb
@@ -45,15 +45,19 @@
       "source": [
         "# Definitions \n",
         "\n",
-        "* Escape character: A chracter that lets you use a subsequant character that is otherwise impossible to put into a string; in Python, this is the `/` character followed by another character.\n",
+        "* __Escape character__: A chracter that lets you use a subsequant character that is otherwise impossible to put into a string; in Python, this is the `/` character followed by another character.\n",
         "\n",
-        "* Raw string: A string that doesn't follow the escape character rules. Initiated with an r before the quotation marks; e.g., `r\"This is a raw string.\"`\n",
+        "* __Raw string__: A string that doesn't follow the escape character rules. Initiated with an r before the quotation marks; e.g., `r\"This is a raw string.\"`\n",
         "\n",
-        "* String interpolation: A process of evaluating a string literal containing one or more placeholders, yielding a result in which the placeholders are replaced with their corresponding values. In Python, this is done with the `%` character or with f-string notation.\n",
+        "* __String interpolation__: A process of evaluating a string literal containing one or more placeholders, yielding a result in which the placeholders are replaced with their corresponding values. In Python, this is done with the `%` character or with f-string notation.\n",
         "\n",
-        "* Unicode: An information technology (IT) standard for the consistent encoding, representation, and handling of text.\n",
+        "* __American Standard Code for Information Interchange (ASCII)__: encodes 128 English, numerical, and punctuation characters into seven-*bit* integers, i.e., each character is made up of a seve-digit binary integer.\n",
         "\n",
-        "* Unicode code point: The numeral value of a character in unicode."
+        "* __Unicode__: A standardized system for the consistent encoding, representation, and handling of text (e.g., letters, numbers, emojis, etc.) expressed in most of the world's writing systems.\n",
+        "\n",
+        "* __Unicode code point__: The value (an alpha-numerical value in UTF-8) that represents a character in Unicode.\n",
+        "\n",
+        "* __UTF-8__: Capable of encoding 1,112,064 Unicode code points. The first 128 characters of UTF-8 are made up of the ASCII character set. Unlike the ASCII standard, UTF-8 allows up to 8 bytes per character (the first 128 characters need one byte)."
       ]
     },
     {
@@ -64,30 +68,30 @@
       "source": [
         "# New functions covered this chapter\n",
         "\n",
-        "* `stringName.upper()` \n",
-        "* `stringName.lower()`\n",
-        "* `stringName.isupper()`\n",
-        "* `stringName.islower()`\n",
-        "* `stringName.isalpha()`\n",
-        "* `stringName.isalnum()`\n",
-        "* `stringName.isdecimal()`\n",
-        "* `stringName.isspace()`\n",
-        "* `stringName.istitle()`\n",
-        "* `stringName.startswith()`\n",
-        "* `stringName.endswith()`\n",
-        "* `stringName.join()`\n",
-        "* `stringName.split()`\n",
-        "* `stringName.partition()`\n",
-        "* `stringName.rjust()`\n",
-        "* `stringName.ljust()`\n",
-        "* `stringName.center()`\n",
-        "* `stringName.strip()`\n",
-        "* `stringName.lstrip()`\n",
-        "* `stringName.rstrip()`\n",
+        "* *stringName*`.upper()` \n",
+        "* *stringName*`.lower()`\n",
+        "* *stringName*`.isupper()`\n",
+        "* *stringName*`.islower()`\n",
+        "* *stringName*`.isalpha()`\n",
+        "* *stringName*`.isalnum()`\n",
+        "* *stringName*`.isdecimal()`\n",
+        "* *stringName*`.isspace()`\n",
+        "* *stringName*`.istitle()`\n",
+        "* *stringName*`.startswith()`\n",
+        "* *stringName*`.endswith()`\n",
+        "* *stringName*`.join()`\n",
+        "* *stringName*`.split()`\n",
+        "* *stringName*`.partition()`\n",
+        "* *stringName*`.rjust()`\n",
+        "* *stringName*`.ljust()`\n",
+        "* *stringName*`.center()`\n",
+        "* *stringName*`.strip()`\n",
+        "* *stringName*`.lstrip()`\n",
+        "* *stringName*`.rstrip()`\n",
         "* `ord()`\n",
         "* `chr()`\n",
-        "* `pyperclip.copy()` requires `import paperclip` after third-party install\n",
-        "* `pyperclip.paste()` requires `import paperclip` after third-party install\n",
+        "* `pyperclip.copy()` requires `import paperclip` after third-party install, unless using Anaconda\n",
+        "* `pyperclip.paste()` requires `import paperclip` after third-party install, unless using Anaconda\n",
         "\n",
         "### Try using these functions, then explain what you think these functions are doing. \n",
         "#### Google them to learn more! \n",
