--- a/11-debugging/ABS_Chap_11.ipynb
+++ b/11-debugging/ABS_Chap_11.ipynb
@@ -42,7 +42,7 @@
         "* __Exceptions__: Errors detected during execution.\n",
         "* __Traceback__: Error information that includes an error message, the line number of the line that caused the error, and the call stack.\n",
         "* __Call stack__: The sequence of the function calls the led to the error.\n",
-        "* Assertion: A sanity check on your program to ensure is it's doing anything obviously wrong. These should be used to fins programmer errors and not user errors."
+        "* __Assertion__: A sanity check on your program to ensure is it's doing anything obviously wrong. These should be used to fins programmer errors and not user errors."
       ],
       "cell_type": "markdown",
       "metadata": {}
