--- a/01-python-basics/ABS_Chap_1.ipynb
+++ b/01-python-basics/ABS_Chap_1.ipynb
@@ -36,7 +36,7 @@
         "\n",
         "You can compute expressions with a calculator or enter string concatenations with a word processor. You can even do string replication easily by copying and pasting text. But expressions, and their component values—operators, variables, and function calls—are the basic building blocks that make programs. Once you know how to handle these elements, you will be able to instruct Python to operate on large amounts of data for you.\n",
         "\n",
-        "It is good to remember the different types of operators (+, -, \\*, /, //, %, and ** for math operations, and + and * for string operations) and the three data types (integers, floating-point numbers, and strings) introduced in this chapter.\n",
+        "It is good to remember the different types of operators (`+`, `-`, `\\*`, `/`, `//`, `%`, and `**` for math operations, and `+` and `*` for string operations) and the three data types (integers, floating-point numbers, and strings) introduced in this chapter.\n",
         "\n",
         "I introduced a few different functions as well. The `print()` and `input()` functions handle simple text output (to the screen) and input (from the keyboard). The `len()` function takes a string and evaluates to an int of the number of characters in the string. The `str()`, `int()`, and `float()` functions will evaluate to the string, integer, or floating-point number form of the value they are passed."
       ]
@@ -47,37 +47,37 @@
         "id": "OgH-OJMJy-A9"
       },
       "source": [
-        "#Definitions \n",
+        "# Definitions \n",
         "\n",
-        "* Expression: An expression is a combination of values, variables, operators, and calls to functions which needs to be evaluated.\n",
+        "* __Expression__: An expression is a combination of values, variables, operators, and calls to functions which needs to be evaluated.\n",
         "\n",
-        "* Value: The information that is stored within a certain object.\n",
+        "* __Value__: The information that is stored within a certain object.\n",
         "\n",
-        "* Variable: A containers for storing data values. A variable is created the moment you first assign a value to it.\n",
+        "* __Variable__: A containers for storing data values. A variable is created the moment you first assign a value to it.\n",
         "\n",
-        "* Operator: A special symbols in Python that carry out arithmetic or logical computation.\n",
+        "* __Operator__: A special symbols in Python that carry out arithmetic or logical computation.\n",
         "\n",
-        "* Real numbers: Informally, any number on the number line (e.g., 0, -1.2, -pi, pi/5, etc.).\n",
+        "* __Real numbers__: Informally, any number on the number line (e.g., 0, -1.2, -pi, pi/5, etc.).\n",
         "\n",
-        "* Integer: These are 'whole numbers' such as 0, 1, -1, 2, -2, 3, -3, and so on.\n",
+        "* __Integer__: These are 'whole numbers' such as 0, 1, -1, 2, -2, 3, -3, and so on.\n",
         "\n",
-        "* Rational: These are real numbers that can be expressed as a quotient or fraction of two integers (e.g., 0/1, 1/1, -1/1, 1/2, -3/4, etc.). Informally speaking, these are numbers with a finite decimal represention or with a pattern (0.3, 0.41, -4.4532, 4.99999..., 3.14, etc.).\n",
+        "* __Rational number___: These are real numbers that can be expressed as a quotient or fraction of two integers (e.g., 0/1, 1/1, -1/1, 1/2, -3/4, etc.). Informally speaking, these are numbers with a finite decimal represention or with a pattern (0.3, 0.41, -4.4532, 4.99999..., 3.14, etc.).\n",
         "\n",
-        "* Irrational: These are real numbers that are not rational numbers (e.g., pi, exp, the golden ratio, sqrt(2), etc.).\n",
+        "* __Irrational number__: These are real numbers that are not rational numbers (e.g., pi, exp, the golden ratio, sqrt(2), etc.).\n",
         "\n",
-        "* Floating: Computers use decimal represenations of real numbers. Important: computers can only provide 15-16 digits of a real numbers. These representations are called floating point numbers. Floating point numbers do not form a field (i.e., binary operations are not associative with floating point numbers).\n",
+        "* __Floating point number__: Computers use decimal represenations of real numbers. Important: computers can only provide 15-16 digits of a real numbers. These representations are called floating point numbers. Floating point numbers do not form a field (i.e., binary operations are not associative with floating point numbers).\n",
         "\n",
-        "* Associative: A property that states that binary operations do not change regardless of grouping (e.g., (2+3)+4=2+(3+4)). Important: binary operations, like addition and subtraction, on floating point numbers are not associative on computers (e.g., `(exp(2*pi)+exp(pi))-exp(1)` and `exp(2*pi)+(exp(pi)-exp(1))` are mathematically the same, but not so with Python). Unlike mathematics, associativity is not always guarenteed on computers.\n",
+        "* __Associative property__: A property that states that binary operations do not change regardless of grouping (e.g., (2+3)+4=2+(3+4)). Important: binary operations, like addition and subtraction, on floating point numbers are not associative on computers (e.g., `(exp(2*pi)+exp(pi))-exp(1)` and `exp(2*pi)+(exp(pi)-exp(1))` are mathematically the same, but not so with Python). Unlike mathematics, associativity is not always guarenteed on computers.\n",
         "\n",
-        "* Comment: Beginning with an octothorpe # a comment does not execute when you run a program. Comments are in the source code for humans to read.\n",
+        "* __Comment__: Beginning with an octothorpe # a comment does not execute when you run a program. Comments are in the source code for humans to read.\n",
         "\n",
-        "* Function: A block of organized, reusable code that is used to perform a single, related action.\n",
+        "* __Function__: A block of organized, reusable code that is used to perform a single, related action.\n",
         "\n",
-        "* Argument: A value passed to a function (or method) when calling the function.\n",
+        "* __Argument__: A value passed to a function (or method) when calling the function.\n",
         "\n",
-        "* Syntax: The set of rules which defines how a Python program will be written.\n",
+        "* __Syntax__: The set of rules which defines how a Python program will be written.\n",
         "\n",
-        "* PEP-8: The official style guide for Python code. Find out more at https://www.python.org/dev/peps/pep-0008/ "
+        "* __PEP-8__: The official style guide for Python code. Find out more at <https://www.python.org/dev/peps/pep-0008/>"
       ]
     },
     {
@@ -110,18 +110,18 @@
         "# Practice Questions \n",
         "1. Which of the following are operators, and which are values?\n",
         "\n",
-        "* \\* \n",
-        "* 'hello'  \n",
-        "* -88.8  \n",
-        "* \\-\n",
-        "* /\n",
-        "* +\n",
-        "* 5\n",
+        "* `\\*` \n",
+        "* `'hello'`  \n",
+        "* `-88.8`\n",
+        "* `\\-`\n",
+        "* `/`\n",
+        "* `+`\n",
+        "* `5`\n",
         "\n",
         "2. Which of the following is a variable, and which is a string?\n",
         "\n",
-        "* spam\n",
-        "* 'spam'\n",
+        "* `spam`\n",
+        "* `'spam'`\n",
         "\n",
         "3. Name three data types.\n",
         "\n",
@@ -130,24 +130,30 @@
         "5. This chapter introduced assignment statements, like spam = 10. What is the difference between an expression and a statement?\n",
         "\n",
         "6. What does the variable bacon contain after the following code runs?\n",
+        "```\n",
+        "bacon = 20\n",
         "\n",
-        "* bacon = 20\n",
-        "* bacon + 1\n",
+        "bacon + 1\n",
+        "```\n",
         "\n",
         "7. What should the following two expressions evaluate to?\n",
         "\n",
-        "* 'spam' + 'spamspam'\n",
-        "* 'spam' * 3\n",
+        "```\n",
+        "'spam' + 'spamspam'\n",
+        "'spam' * 3\n",
+        "```\n",
         "\n",
-        "8. Why is eggs a valid variable name while 100 is invalid?\n",
+        "8. Why is `eggs` a valid variable name while `100` is invalid?\n",
         "\n",
         "9. What three functions can be used to get the integer, floating-point number, or string version of a value?\n",
         "\n",
         "10. Why does this expression cause an error? How can you fix it?\n",
         "\n",
-        "* 'I have eaten ' + 99 + ' burritos.'\n",
+        "```\n",
+        "'I have eaten ' + 99 + ' burritos.'\n",
+        "```\n",
         "\n",
-        "11. Search online for the Python documentation for the len() function. It will be on a web page titled “Built-in Functions.” Skim the list of other functions Python has, look up what the round() function does, and experiment with it in the interactive shell."
+        "11. Search online for the Python documentation for the `len()` function. It will be on a web page titled “Built-in Functions.” Skim the list of other functions Python has. Look up what the `round()` function does, and experiment with it in the interactive shell."
       ]
     },
     {
@@ -158,7 +164,7 @@
       "source": [
         "# Practice Projects \n",
         "\n",
-        "None this chapter. "
+        "None in this chapter. "
       ]
     }
   ]
